# deck2trice

./: .gitignore  LICENSE  README.md  build_gui.py  deck2trice-gui.spec  gui_launcher.py  pyproject.toml
.github/workflows/: publish.yml
deck2trice/: _version.py  config.py  core.py  gui.py  main.py
moxtrice/: config.py  core.py  main.py
tests/: test_yaml_load.py
