[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deck2trice"
requires-python = ">=3.12"
authors = [{ name = "Mattys Gervais", email = "mattysgervais@gmail.com" }]
description = "Multi-source MTG deck converter for Cockatrice. Supports Moxfield, Archidekt, and more."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mtg", "magic", "cockatrice", "moxfield", "archidekt", "deck", "converter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "requests",
    "emoji",
    "ml_collections",
    "tqdm",
    "pathvalidate",
    "curl_cffi",
    "absl-py",
]

dynamic = ["version"]

[project.scripts]
deck2trice = "deck2trice.main:main"
deck2trice-gui = "deck2trice.gui:main"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "deck2trice/_version.py"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[project.urls]
"Homepage" = "https://github.com/liperium/deck2trice"
"Bug Tracker" = "https://github.com/liperium/deck2trice/issues"
"Repository" = "https://github.com/liperium/deck2trice"
